--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 </head>
 
 <body>
-  
+
+
 
 <header class="navigation fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -45,15 +46,15 @@
         <li class="nav-item">
           <a class="nav-link" href="about.html">about</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
-        </li>
+        </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="projects.html">projects</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -64,43 +65,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-11 mx-auto">
-        <h1 class="text-white font-tertiary">Benjamin Knower<br> Developer</h1>
+        <h1 class="text-white font-tertiary">Benjamin Knower</h1>
       </div>
     </div>
   </div>
-  <div class="layer-bg w-100">
-    <img class="img-fluid w-100" src="images/illustrations/leaf-bg.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l2">
-    <img src="images/illustrations/dots-cyan.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l3">
-    <img src="images/illustrations/leaf-orange.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l4">
-    <img src="images/illustrations/dots-orange.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l5">
-    <img src="images/illustrations/leaf-yellow.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l6">
-    <img src="images/illustrations/leaf-cyan.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l7">
-    <img src="images/illustrations/dots-group-orange.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l8">
-    <img src="images/illustrations/leaf-pink-round.png" alt="bg-shape">
-  </div>
-  <div class="layer" id="l9">
-    <img src="images/illustrations/leaf-cyan-2.png" alt="bg-shape">
-  </div>
-  <!-- social icon -->
+ <!-- social icon -->
   <ul class="list-unstyled ml-5 mt-3 position-relative zindex-1">
-    <li class="mb-3"><a class="text-white" href="#"><i class="ti-facebook"></i></a></li>
-    <li class="mb-3"><a class="text-white" href="#"><i class="ti-instagram"></i></a></li>
-    <li class="mb-3"><a class="text-white" href="#"><i class="ti-dribbble"></i></a></li>
-    <li class="mb-3"><a class="text-white" href="#"><i class="ti-twitter"></i></a></li>
+    <li class="mb-3"><a class="text-white" href="https://www.linkedin.com/in/benjamin-knower-b39b52181/"><i class="ti-linkedin"></i></a></li>
+    <li class="mb-3"><a class="text-white" href="https://github.com/bknower"><i class="ti-github"></i></a></li>
+
   </ul>
   <!-- /social icon -->
 </section>
@@ -111,40 +84,18 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-left text-left">
-        <p class="font-secondary paragraph-lg text-dark">Student at Northeastern University studying Computer Science.</p>
-        <a href="about.html" class="btn btn-transparent">learn more</a>
+        <p class="font-secondary paragraph-lg text-dark">I'm a student at Northeastern University studying Computer Science.<br>
+          Check out some of my <a href="projects.html">projects</a> or read some more <a href="about.html">about me</a>.</p>
       </div>
     </div>
   </div>
 </section>
 <!-- /about -->
-
-<!-- skills -->
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-left">
-        <h2 class="section-title">Skills</h2>
-      </div>
-    </div>
-  </div>
-  
-  <div class="container">
-    <div class="client-logo-slider d-flex align-items-center">
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/c.png"
-          alt="client-logo"></a>
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-          src="images/clients-logo/cpp.png" alt="client-logo"></a>
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-          src="images/clients-logo/java.jpg" alt="client-logo"></a>
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-          src="images/clients-logo/python.png" alt="client-logo"></a>
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-          src="images/clients-logo/rust.jpg" alt="client-logo"></a>
-    </div>
-  </div>
+<section>
+  <object classid="java:bMapped.class" width="100" height="100" archive="maze.jar">
+    <param name="param" value="val" />
+  </object>
 </section>
-<!-- /skills -->
 
 <!-- experience -->
 <!-- <section class="section">
@@ -239,7 +190,7 @@
 <!-- /education -->
 
 <!-- services -->
-<section class="section">
+<!-- <section class="section">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
@@ -277,21 +228,21 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- /services -->
 
-<!-- portfolio -->
+<!-- projects -->
 <!-- <section class="section">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h2 class="section-title">Portfolio</h2>
+        <h2 class="section-title">projects</h2>
       </div>
     </div>
     <div class="row shuffle-wrapper">
       <div class="col-lg-4 col-6 mb-4 shuffle-item">
         <div class="position-relative rounded hover-wrapper">
-          <img src="images/portfolio/item-1.png" alt="portfolio-image" class="img-fluid rounded w-100">
+          <img src="images/projects/item-1.png" alt="projects-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
               <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
@@ -301,7 +252,7 @@
       </div>
       <div class="col-lg-4 col-6 mb-4 shuffle-item">
         <div class="position-relative rounded hover-wrapper">
-          <img src="images/portfolio/item-2.png" alt="portfolio-image" class="img-fluid rounded w-100">
+          <img src="images/projects/item-2.png" alt="projects-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
               <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
@@ -311,7 +262,7 @@
       </div>
       <div class="col-lg-4 col-6 mb-4 shuffle-item">
         <div class="position-relative rounded hover-wrapper">
-          <img src="images/portfolio/item-3.png" alt="portfolio-image" class="img-fluid rounded w-100">
+          <img src="images/projects/item-3.png" alt="projects-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
               <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
@@ -321,7 +272,7 @@
       </div>
       <div class="col-lg-4 col-6 mb-4 shuffle-item">
         <div class="position-relative rounded hover-wrapper">
-          <img src="images/portfolio/item-4.png" alt="portfolio-image" class="img-fluid rounded w-100">
+          <img src="images/projects/item-4.png" alt="projects-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
               <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
@@ -331,7 +282,7 @@
       </div>
       <div class="col-lg-4 col-6 mb-4 shuffle-item">
         <div class="position-relative rounded hover-wrapper">
-          <img src="images/portfolio/item-5.png" alt="portfolio-image" class="img-fluid rounded w-100">
+          <img src="images/projects/item-5.png" alt="projects-image" class="img-fluid rounded w-100">
           <div class="hover-overlay">
             <div class="hover-content">
               <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
@@ -342,7 +293,7 @@
     </div>
   </div>
 </section> -->
-<!-- /portfolio -->
+<!-- /projects -->
 
 
 <!-- blog -->
@@ -396,37 +347,6 @@
 </section> -->
 <!-- /blog -->
 
-<!-- contact -->
-<section class="section section-on-footer" data-background="images/backgrounds/bg-dots.png">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h2 class="section-title">Contact Info</h2>
-      </div>
-      <div class="col-lg-8 mx-auto">
-        <div class="bg-white rounded text-center p-5 shadow-down">
-          <h4 class="mb-80">Contact Form</h4>
-          <form action="#" class="row">
-            <div class="col-md-6">
-              <input type="text" id="name" name="name" placeholder="Full Name" class="form-control px-0 mb-4">
-            </div>
-            <div class="col-md-6">
-              <input type="email" id="email" name="email" placeholder="Email Address" class="form-control px-0 mb-4">
-            </div>
-            <div class="col-12">
-              <textarea name="message" id="message" class="form-control px-0 mb-4"
-                placeholder="Type Message Here"></textarea>
-            </div>
-            <div class="col-lg-6 col-10 mx-auto">
-              <button class="btn btn-primary w-100">send</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /contact -->
 
 <!-- footer -->
 <footer class="bg-dark footer-section">
@@ -435,24 +355,14 @@
       <div class="row">
         <div class="col-md-4">
           <h5 class="text-light">Email</h5>
-          <p class="text-white paragraph-lg font-secondary">steve.fruits@email.com</p>
+          <p class="text-white paragraph-lg font-secondary">knower.b@northeastern.edu</p>
         </div>
         <div class="col-md-4">
           <h5 class="text-light">Phone</h5>
-          <p class="text-white paragraph-lg font-secondary">+880 2544 658 256</p>
-        </div>
-        <div class="col-md-4">
-          <h5 class="text-light">Address</h5>
-          <p class="text-white paragraph-lg font-secondary">125/A, CA Commercial Area, California, USA</p>
+          <p class="text-white paragraph-lg font-secondary">(610) - 324 - 9949</p>
         </div>
       </div>
     </div>
-  </div>
-  <div class="border-top text-center border-dark py-5">
-    <p class="mb-0 text-light">Copyright ©<script>
-        var CurrentYear = new Date().getFullYear()
-        document.write(CurrentYear)
-      </script> a theme by <a href="https://themefisher.com">themefisher.com</a></p>
   </div>
 </footer>
 <!-- /footer -->
