--- a/about.html
+++ b/about.html
@@ -27,7 +27,6 @@
 </head>
 
 <body>
-  
 
 <header class="navigation fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -45,15 +44,15 @@
         <li class="nav-item">
           <a class="nav-link" href="about.html">about</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
-        </li>
+        </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="projects.html">projects</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -104,146 +103,86 @@
 </section>
 <!-- /about -->
 
-<!-- Work Process -->
+<!-- experience -->
 <section class="section">
   <div class="container">
     <div class="row justify-content-around">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-title">Work Process</h2>
+      <div class="col-lg-12 text-left">
+        <h2 class="section-title">Experience</h2>
       </div>
-      <div class="col-lg-3 col-md-4 text-center hover-shadow pt-3">
-        <div class="">
-          <img src="images/icons/plan.png" class="mb-4" alt="icon">
-          <h4 class="mb-4">Research and Plan</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.</p>
-        </div>
+      <div class="col-lg-3 col-md-4 text-left">
+        <p class="mb-0">Sep 2019 - Present</p>
+        <h4>Embedded Design Course Assistant</h4>
+        <h6 class="text-light">Northeastern University</h6>
       </div>
-      <div class="col-lg-3 col-md-4 text-center hover-shadow pt-3">
-        <img src="images/icons/design.png" class="mb-4" alt="icon">
-        <h4 class="mb-4">Design and Develop</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua.</p>
+      <div class="col-lg-3 col-md-4 text-left">
+        <p class="mb-0">Dec 2018 - May 2019</p>
+        <h4>Math Department Tutor</h4>
+        <h6 class="text-light">Northeastern University</h6>
       </div>
-      <div class="col-lg-3 col-md-4 text-center hover-shadow pt-3">
-        <img src="images/icons/print.png" class="mb-4" alt="icon">
-        <h4 class="mb-4">Deliver</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua.</p>
+      <div class="col-lg-3 col-md-4 text-center">
+        <p class="mb-0">Jun 2019 - Aug 2019</p>
+        <h4>Instructor</h4>
+        <h6 class="text-light">iD Tech Camps</h6>
       </div>
     </div>
   </div>
 </section>
-<!-- ./Work Process -->
+<!-- ./experience -->
 
-<!-- team -->
-<section class="section bg-cover" data-background="images/backgrounds/team-bg.png">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h2 class="section-title">My Team</h2>
-      </div>
-      <div class="col-md-4 col-sm-6 mb-4 mb-md-0">
-        <div class="card text-center">
-          <img src="images/team/member-1.png" class="card-img-top">
-          <div class="card-body">
-            <h4 class="card-title">Jack Schenziwe</h4>
-            <p class="text-light font-secondary">Project Manager</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-6 mb-4 mb-md-0">
-        <div class="card text-center">
-          <img src="images/team/member-2.png" class="card-img-top">
-          <div class="card-body">
-            <h4 class="card-title">Jack Schenziwe</h4>
-            <p class="text-light font-secondary">Project Manager</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-6 mb-4 mb-md-0">
-        <div class="card text-center">
-          <img src="images/team/member-3.png" class="card-img-top">
-          <div class="card-body">
-            <h4 class="card-title">Jack Schenziwe</h4>
-            <p class="text-light font-secondary">Project Manager</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /team -->
-
-<!-- clients -->
+<!-- skills -->
 <section class="section">
   <div class="container">
     <div class="row">
-      <div class="col-12 text-center">
-        <h2 class="section-title">My Clients</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="client-logo-slider d-flex align-items-center">
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-1.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-2.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-3.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-4.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-5.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-1.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-2.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-3.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-4.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-              src="images/clients-logo/client-logo-5.png" alt="client-logo"></a>
-        </div>
+      <div class="col-lg-12 text-left">
+        <h2 class="section-title">Skills</h2>
       </div>
     </div>
   </div>
+  
+  <div class="container">
+    <div class="client-logo-slider d-flex align-items-center">
+      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/c.png"
+          alt="client-logo"></a>
+      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
+          src="images/clients-logo/cpp.png" alt="client-logo"></a>
+      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
+          src="images/clients-logo/java.jpg" alt="client-logo"></a>
+      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
+          src="images/clients-logo/python.png" alt="client-logo"></a>
+      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
+          src="images/clients-logo/rust.jpg" alt="client-logo"></a>
+    </div>
+  </div>
 </section>
-<!-- /clients -->
+<!-- /skills -->
 
-<!-- contact -->
-<section class="section section-on-footer" data-background="images/backgrounds/bg-dots.png">
+<!-- education -->
+<section class="section position-relative">
   <div class="container">
     <div class="row">
-      <div class="col-12 text-center">
-        <h2 class="section-title">Contact Info</h2>
+      <div class="col-lg-12 text-left">
+        <h2 class="section-title">Education</h2>
       </div>
-      <div class="col-lg-8 mx-auto">
-        <div class="bg-white rounded text-center p-5 shadow-down">
-          <h4 class="mb-80">Contact Form</h4>
-          <form action="#" class="row">
-            <div class="col-md-6">
-              <input type="text" id="name" name="name" placeholder="Full Name" class="form-control px-0 mb-4">
-            </div>
-            <div class="col-md-6">
-              <input type="email" id="email" name="email" placeholder="Email Address" class="form-control px-0 mb-4">
-            </div>
-            <div class="col-12">
-              <textarea name="message" id="message" class="form-control px-0 mb-4"
-                placeholder="Type Message Here"></textarea>
-            </div>
-            <div class="col-lg-6 col-10 mx-auto">
-              <button class="btn btn-primary w-100">send</button>
-            </div>
-          </form>
+      <div class="col-lg-6 col-md-6 mb-80">
+        <div class="d-flex">
+          <div class="mr-lg-5 mr-3">
+            <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
+          </div>
+          <div>
+            <p class="text-dark mb-1">2018 - Present</p>
+            <h4>Bachelor's of Science in Computer Science</h4>
+            <p class="mb-0 text-light">Northeastern University</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
+  <!-- bg image -->
+  <img class="img-fluid edu-bg-image w-100" src="images/backgrounds/education-bg.png" alt="bg-image">
 </section>
-<!-- /contact -->
+<!-- /education -->
+
 
 <!-- footer -->
 <footer class="bg-dark footer-section">
