various changes to site

--- a/about.html
+++ b/about.html
@@ -67,13 +67,6 @@
       </div>
     </div>
   </div>
-  <!-- background shapes -->
-  <img src="images/illustrations/leaf-bg-top.png" alt="illustrations" class="bg-shape-1 w-100">
-  <img src="images/illustrations/dots-group-sm.png" alt="illustrations" class="bg-shape-2">
-  <img src="images/illustrations/leaf-yellow.png" alt="illustrations" class="bg-shape-3">
-  <img src="images/illustrations/leaf-orange.png" alt="illustrations" class="bg-shape-4">
-  <img src="images/illustrations/dots-group-cyan.png" alt="illustrations" class="bg-shape-5">
-  <img src="images/illustrations/leaf-cyan-lg.png" alt="illustrations" class="bg-shape-6">
 </section>
 <!-- /page title -->
 
@@ -82,21 +75,15 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat.</p>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident.</p>
-        <p>Deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia.</p>
+        <p>I'm Ben. I just finished my second year at Northeastern University studying Computer Science.</p>
+        <p>I love programming, and I've been doing it since middle school.</p>
+        <p>Some of my hobbies are listening to audiobooks, playing video games, and learning languages.</p>
       </div>
       <div class="col-md-4 text-center drag-lg-top">
         <div class="shadow-down mb-4">
-          <img src="images/about/author.jpg" alt="author" class="img-fluid w-100 rounded-lg border-thick border-white">
+          <img src="images/me.jpg" alt="author" class="img-fluid w-100 rounded-lg border-thick border-white">
         </div>
-        <img src="images/about/signature.png" alt="signature" class="img-fluid">
-        <h4>Johnathan Smith</h4>
+        <h4>Benjamin Knower</h4>
       </div>
     </div>
   </div>
@@ -178,8 +165,6 @@
       </div>
     </div>
   </div>
-  <!-- bg image -->
-  <img class="img-fluid edu-bg-image w-100" src="images/backgrounds/education-bg.png" alt="bg-image">
 </section>
 <!-- /education -->
 
@@ -203,12 +188,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="border-top text-center border-dark py-5">
-    <p class="mb-0 text-light">Copyright ©<script>
-        var CurrentYear = new Date().getFullYear()
-        document.write(CurrentYear)
-      </script> a theme by <a href="https://themefisher.com">themefisher.com</a></p>
   </div>
 </footer>
 <!-- /footer -->
