--- a/projects.html
+++ b/projects.html
@@ -95,10 +95,10 @@
     <div class="row shuffle-wrapper">
       <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;design&quot;,&quot;illustration&quot;]">
         <div class="position-relative rounded hover-wrapper">
-          <img src="images/projects/item-1.png" alt="projects-image" class="img-fluid rounded w-100 d-block">
+          <img src="images/projects/raspberry.webp" alt="projects-image" class="img-fluid rounded w-100 d-block">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
+              <a class="btn btn-light btn-sm" href="project-single.html">Pi Tiles</a>
             </div>
           </div>
         </div>
