--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
           <img src="images/projects/raspberry.webp" alt="projects-image" class="img-fluid rounded w-100 d-block">
           <div class="hover-overlay">
             <div class="hover-content">
-              <a class="btn btn-light btn-sm" href="project-single.html">Pi Tiles</a>
+              <a class="btn btn-light btn-sm" href="piTiles.html">Pi Tiles</a>
             </div>
           </div>
         </div>
